--- a/templates/main.html
+++ b/templates/main.html
@@ -9,5 +9,13 @@
 	<div id="wrapx">
 		<div id="wrap"></div>
 	</div>
+	<div id="win" class="index1">
+		<img src="static/img/sheng.png">
+	</div>
+	<div id="lost" class="index1">
+		<img src="static/img/fu.png">
+	</div>
+	<div id="hover" class="index2" style="background-color:gray;"></div>
+	<a href="" class="index2" id="reset" style="z-index:3;"></a>
 </body>
 </html>
