--- a/static/wtf.css
+++ b/static/wtf.css
@@ -1,24 +1,24 @@
 #wrapx{
-	width: 610px;
-	height: 610px;
+	width: 460px;
+	height: 460px;
 	margin-left: 50%;
 	position:relative;
 	left: -305px;
 }
 
 #wrap{
-	width: 600px;
-	height: 600px;
+	width: 450px;
+	height: 450px;
 	overflow: hidden;
-	padding: 8px 8px;
+	padding: 3px 3px;
 	border-style: solid;
 	border-width: 2px;
 	border-color: #29241e;
 }
 
 .boxx{
-	width: 38px;
-	height: 38px;
+	width: 28px;
+	height: 28px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #29241e;
@@ -28,6 +28,33 @@
 body{
 	background-color: gray;
 	background-image: url(img/qipan.png);
-	background-repeat: repeat-x repeat-y;
+	background-repeat: repeat
 	text-align: center;
+}
+
+.index1{
+	z-index: 1;
+	text-align: center;
+	vertical-align: middle;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -100px;
+	margin-left: -150px;
+	width: 300px;
+	height: 200px;
+	font-size: 20px;
+	font-family: "Microsoft YaHei";
+	background-image: url(img/win.png);
+	display: none;
+}
+
+.index2{
+	position: fixed;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	z-index: 2;
+	display: none;
 }
